--- a/frontend/src/Login.css
+++ b/frontend/src/Login.css
@@ -3,9 +3,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #ffffff;
+    background-color: #212121;
     font-family: "Söhne", "ui-sans-serif", "system-ui", "-apple-system", "Segoe UI", Roboto, Ubuntu, Cantarell, "Noto Sans", sans-serif, "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    color: #0d0d0d;
+    color: #ffffff;
     padding: 20px;
 }
 
@@ -20,7 +20,7 @@
 .logo-text {
     font-weight: 700;
     font-size: 24px;
-    color: #000000;
+    color: #ffffff;
 }
 
 .login-content {
@@ -36,13 +36,13 @@
     font-size: 32px;
     font-weight: 700;
     margin-bottom: 12px;
-    color: #000000;
+    color: #ffffff;
     text-align: center;
 }
 
 .login-subtitle {
     font-size: 16px;
-    color: #333333;
+    color: #ffffff;
     text-align: center;
     margin-bottom: 32px;
     line-height: 1.5;
@@ -73,7 +73,7 @@
 }
 
 .social-btn:hover {
-    background-color: #f6f7f9;
+    background-color: #4f4f4f;
 }
 
 .social-icon {
@@ -122,10 +122,11 @@
 }
 
 .email-input {
+    color: #212121;
     width: 100%;
     height: 52px;
     padding: 0 16px;
-    border: 1px solid #c2c8d0;
+    border: 1px solid #ffffff;
     border-radius: 6px;
     font-size: 16px;
     outline: none;
@@ -163,7 +164,7 @@
 }
 
 .login-footer a {
-    color: #6D7583;
+    color: #ffffff;
     text-decoration: none;
 }
 
@@ -176,10 +177,10 @@
     font-size: 14px;
     margin-top: 16px;
     text-align: center;
-    background-color: #ffeeed;
+    background-color: #212121;
     padding: 10px;
     border-radius: 6px;
-    width: 100%;
+    width: 30%;
 }
 
 @media (max-width: 600px) {
